Drop Java 6/7 support (#838)